Add maveniverse parent, reformat